@@ -1,0 +1,40 @@
+/////////////////////////////////////////////////////////////////////////////
+//    WinMerge:  an interactive diff/merge utility
+//    Copyright (C) 1997-2006  Thingamahoochie Software
+//    Author: Dean Grimm
+//
+//    This program is free software; you can redistribute it and/or modify
+//    it under the terms of the GNU General Public License as published by
+//    the Free Software Foundation; either version 2 of the License, or
+//    (at your option) any later version.
+//
+//    This program is distributed in the hope that it will be useful,
+//    but WITHOUT ANY WARRANTY; without even the implied warranty of
+//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//    GNU General Public License for more details.
+//
+//    You should have received a copy of the GNU General Public License
+//    along with this program; if not, write to the Free Software
+//    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+//
+/////////////////////////////////////////////////////////////////////////////
+/** 
+ * @file  FileOrFolderSelect.h
+ *
+ * @brief Declaration of the file and folder selection routines.
+ */
+
+#ifndef _FILE_OR_FOLDER_SELECTION_H_
+#define _FILE_OR_FOLDER_SELECTION_H_
+
+BOOL SelectFile(HWND parent, CString& path, LPCTSTR root_path = NULL, 
+			 LPCTSTR title = _T("Open"), UINT filterid = 0,
+			 BOOL is_open =TRUE);
+
+BOOL SelectFolder(CString& path, LPCTSTR root_path = NULL, 
+			 LPCTSTR title = NULL, 
+			 HWND hwndOwner = NULL);
+
+void ConvertFilter(LPTSTR filterStr);
+
+#endif
