@@ -29,6 +29,7 @@
 #include "coretools.h"
 #include "paths.h"
 #include "CompareOptions.h"
+#include "FileOrFolderSelect.h"
 
 #ifdef _DEBUG
 #define new DEBUG_NEW
